src/grupalParser.java
// Generated from grupal.g4 by ANTLR 4.7.2

    import java.io.FileWriter;
    import java.io.File;
    import java.io.IOException;
    import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class grupalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, ENTRECOMILLADOS=49, IDENT=50, COMMENT=51, 
		NUM_INT_CONST=52, NUM_REAL_CONST=53, NUM_INT_CONST_B=54, NUM_INT_CONST_O=55, 
		NUM_INT_CONST_H=56, STRING_CONST=57, WS=58, ERRORES=59;
	public static final int
		RULE_prg = 0, RULE_dcllist = 1, RULE_dcllistp = 2, RULE_cabecera = 3, 
		RULE_cablist = 4, RULE_decsubprog = 5, RULE_sentlist = 6, RULE_dcl = 7, 
		RULE_dclp = 8, RULE_defcte = 9, RULE_ctelist = 10, RULE_simpvalue = 11, 
		RULE_defvar = 12, RULE_tipo = 13, RULE_charlength = 14, RULE_varlist = 15, 
		RULE_varlistp = 16, RULE_init = 17, RULE_decproc = 18, RULE_formal_paramlist = 19, 
		RULE_nomparamlist = 20, RULE_nomparamlistp = 21, RULE_dec_s_paramlist = 22, 
		RULE_tipoparam = 23, RULE_decfun = 24, RULE_dec_f_paramlist = 25, RULE_sent = 26, 
		RULE_sentp = 27, RULE_sentpp = 28, RULE_sentppp = 29, RULE_exp = 30, RULE_expp = 31, 
		RULE_op = 32, RULE_oparit = 33, RULE_factor = 34, RULE_factorp = 35, RULE_explist = 36, 
		RULE_proc_call = 37, RULE_subpparamlist = 38, RULE_subproglist = 39, RULE_codproc = 40, 
		RULE_codfun = 41, RULE_expcond = 42, RULE_expcondp = 43, RULE_oplog = 44, 
		RULE_factorcond = 45, RULE_opcomp = 46, RULE_doval = 47, RULE_casos = 48, 
		RULE_casosp = 49, RULE_etiquetas = 50, RULE_etiquetasp = 51, RULE_etiquetaspp = 52, 
		RULE_listaetiquetas = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"prg", "dcllist", "dcllistp", "cabecera", "cablist", "decsubprog", "sentlist", 
			"dcl", "dclp", "defcte", "ctelist", "simpvalue", "defvar", "tipo", "charlength", 
			"varlist", "varlistp", "init", "decproc", "formal_paramlist", "nomparamlist", 
			"nomparamlistp", "dec_s_paramlist", "tipoparam", "decfun", "dec_f_paramlist", 
			"sent", "sentp", "sentpp", "sentppp", "exp", "expp", "op", "oparit", 
			"factor", "factorp", "explist", "proc_call", "subpparamlist", "subproglist", 
			"codproc", "codfun", "expcond", "expcondp", "oplog", "factorcond", "opcomp", 
			"doval", "casos", "casosp", "etiquetas", "etiquetasp", "etiquetaspp", 
			"listaetiquetas"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "';'", "'END'", "'INTERFACE'", "','", "'PARAMETER'", 
			"'::'", "'='", "'INTEGER'", "'REAL'", "'CHARACTER'", "'('", "')'", "'SUBROUTINE'", 
			"'INTENT'", "'IN'", "'OUT'", "'INOUT'", "'FUNCTION'", "'IF'", "'DO'", 
			"'SELECT'", "'CASE'", "'ENDIF'", "'ELSE'", "'THEN'", "'WHILE'", "'ENDDO'", 
			"'+'", "'-'", "'*'", "'/'", "'CALL'", "'.OR.'", "'.AND.'", "'.EQV.'", 
			"'.NEQV.'", "'.NOT.'", "'.TRUE.'", "'.FALSE.'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'/='", "'DEFAULT'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ENTRECOMILLADOS", "IDENT", "COMMENT", "NUM_INT_CONST", "NUM_REAL_CONST", 
			"NUM_INT_CONST_B", "NUM_INT_CONST_O", "NUM_INT_CONST_H", "STRING_CONST", 
			"WS", "ERRORES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "grupal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    Creador creador = new Creador();
	    Cabeceras cab= new Cabeceras();

	    File file = new File("codigo.c");
	    FileWriter fr;
	    public void insertTxtC(String t){
	    	{
	    		try {
	    			fr = new FileWriter(file, true);
	    			fr.write(t);
	    			fr.close();
	    		} catch (IOException e) {
	    			e.printStackTrace();
	    		}
	    	}}

	    public HashMap<String,Integer> mapVarSub= new HashMap<String,Integer>(); //Clave=nombre de la variable ; Valor=Numero de accesos;
	    public HashMap<String, HashMap<String,String[]>> comprobacionPunteroFunc = new HashMap<String, HashMap<String,String[]>>();


	//Este método se va a encargar de manejar las comillas de los STRING_CONST de fortran por comillas para el lenguaje C

	public String strConstComillas(String sConst){
		         	         			    String cadenaCorrecta = "";
		         	         			    String s = sConst;
		         	         			    if(sConst.contains ("+")){
		         	         			     String[] separacion = sConst.split("\\+");
		         	         			     int ind = 0;
		         	         	            		    for(String i: separacion){
		         	         	            		       if(i.charAt(i.length()-1)==' ' && i.charAt(0)==' '){
		         	         	                               i = i.substring(1, i.length()-1);
		         	         	            		       }else if(i.charAt(0)==' '){
		         	         	            		           i = i.substring(1, i.length());
		         	         	            		       }else if(i.charAt(i.length()-1)==' '){
		         	         	            		          i = i.substring(0, i.length()-1);
		         	         	            		       }
		         	         	            		       if(i.substring(1, i.length()-1).contains("\"")){
		         	         								   i = i.substring(1, i.length()-1).replaceAll("\"", "\\\\\"");
		         	         								   if(ind == separacion.length-1){
		         												   cadenaCorrecta += "\"" + i + "\"";
		         											   }else{
		         												   cadenaCorrecta += "\"" + i + "\" + ";
		         											   }
		         	         							   }else{
		         											   if(i.charAt(0)=='\''){
		         												 i = "\"" +  i.substring(1, i.length()-1) +  "\"";
		         											   }
		         											   if(ind == separacion.length-1){
		         												   cadenaCorrecta +=   i;
		         											   }else{
		         												   cadenaCorrecta +=  i + " + ";
		         											   }
		         	         	            		       }
		         	         	            		       ind++;
		         	         	            		    }
		         	         	            		    cadenaCorrecta = cadenaCorrecta.replaceAll("\\\\\"\\\\\"","\\\\\"");
		         	         	            		    cadenaCorrecta = cadenaCorrecta.replaceAll("''","'");
		         	         	            		    return cadenaCorrecta;
		         	         			    }
		         	         			   else{
		         	         			       cadenaCorrecta = sConst.replaceAll("\\\\\"\\\\\"","\\\\\"");
		         	         			       cadenaCorrecta = cadenaCorrecta.replaceAll("''","'");
		         	         			       return cadenaCorrecta;
		         	         			   }

		         	         		    }

	//Metodo para tabular todo el String que reciba
	   public String tabulacion(String t) {
	        int cont = 0;
	        String fin= "";
	        String [] lineas = t.split("\n");
	        for(String linea: lineas){
	            if(linea.contains("{")){
	                    String t1="";
	                    for (int i=0; i<cont; i++){
	                        t1+= "\t";
	                    }
	                    cont= cont+1;
	                    fin+= t1 + linea+ "\n";
	            }
	            else{
	                if(linea.contains("}")){
	                cont=cont-1;
	                }
	                String t1="";
	                for (int i=0; i<cont; i++){
	                    t1+= "\t";
	                }
	                fin += t1 + linea + "\n";
	            }
	        }
	        return fin;
	    }

	public grupalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrgContext extends ParserRuleContext {
		public DcllistContext dcllist;
		public CabeceraContext cabecera;
		public SentContext sent;
		public SentlistContext sentlist;
		public SubproglistContext subproglist;
		public List<TerminalNode> IDENT() { return getTokens(grupalParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(grupalParser.IDENT, i);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public CabeceraContext cabecera() {
			return getRuleContext(CabeceraContext.class,0);
		}
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public SubproglistContext subproglist() {
			return getRuleContext(SubproglistContext.class,0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).exitPrg(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__0);
			setState(109);
			match(IDENT);
			setState(110);
			match(T__1);
			setState(111);
			((PrgContext)_localctx).dcllist = dcllist();
			setState(112);
			((PrgContext)_localctx).cabecera = cabecera();
			setState(113);
			((PrgContext)_localctx).sent = sent();
			setState(114);
			((PrgContext)_localctx).sentlist = sentlist();
			setState(115);
			match(T__2);
			setState(116);
			match(T__0);
			setState(117);
			match(IDENT);
			setState(118);
			((PrgContext)_localctx).subproglist = subproglist();
			 System.out.println(creador.getConstantes().getDefine());
			insertTxtC(tabulacion("\n" + ((PrgContext)_localctx).cabecera.re + "\n" + ((PrgContext)_localctx).subproglist.re  + "\n" + "void main (void){" + "\n" + ((PrgContext)_localctx).dcllist.s + ((PrgContext)_localctx).sent.re + ((PrgContext)_localctx).sentlist.re + "\n"+ "}\n"));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DcllistContext extends ParserRuleContext {
		public String s;
		public DcllistpContext dcllistp;
		public DcllistpContext dcllistp() {
			return getRuleContext(DcllistpContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).exitDcllist(this);
		}
	}

	public final DcllistContext dcllist() throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dcllist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			((DcllistContext)_localctx).dcllistp = dcllistp();
			((DcllistContext)_localctx).s =  ((DcllistContext)_localctx).dcllistp.re ;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DcllistpContext extends ParserRuleContext {
		public String re;
		public DclContext dcl;
		public DcllistpContext dcllistp;
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistpContext dcllistp() {
			return getRuleContext(DcllistpContext.class,0);
		}
		public DcllistpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcllistp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).enterDcllistp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).exitDcllistp(this);
		}
	}

	public final DcllistpContext dcllistp() throws RecognitionException {
		DcllistpContext _localctx = new DcllistpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dcllistp);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				((DcllistpContext)_localctx).dcl = dcl();
				setState(125);
				((DcllistpContext)_localctx).dcllistp = dcllistp();
				((DcllistpContext)_localctx).re =  ((DcllistpContext)_localctx).dcl.re+ " " + ((DcllistpContext)_localctx).dcllistp.re ;
				}
				break;
			case T__3:
			case T__19:
			case T__20:
			case T__21:
			case T__32:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				((DcllistpContext)_localctx).re = "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabeceraContext extends ParserRuleContext {
		public String re;
		public CablistContext cablist;
		public CablistContext cablist() {
			return getRuleContext(CablistContext.class,0);
		}
		public CabeceraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecera; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).enterCabecera(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).exitCabecera(this);
		}
	}

	public final CabeceraContext cabecera() throws RecognitionException {
		CabeceraContext _localctx = new CabeceraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cabecera);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(T__3);
				setState(132);
				((CabeceraContext)_localctx).cablist = cablist();
				setState(133);
				match(T__2);
				setState(134);
				match(T__3);
				((CabeceraContext)_localctx).re = ((CabeceraContext)_localctx).cablist.re;
				}
				break;
			case T__19:
			case T__20:
			case T__21:
			case T__32:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				((CabeceraContext)_localctx).re = "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CablistContext extends ParserRuleContext {
		public String re;
		public DecprocContext decproc() {
			return getRuleContext(DecprocContext.class,0);
		}
		public DecsubprogContext decsubprog() {
			return getRuleContext(DecsubprogContext.class,0);
		}
		public DecfunContext decfun() {
			return getRuleContext(DecfunContext.class,0);
		}
		public CablistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cablist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).enterCablist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupalListener ) ((grupalListener)listener).exitCablist(this);
		}
	}

	public final CablistContext cablist() throws RecognitionException {
		CablistContext _localctx = new CablistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cablist);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				decproc();
				setState(141);
				decsubprog();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				decfun();
				setState(144);
				decsubprog();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
